--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  height: auto;
   width: 100%;
-  background-image: url('./backgroundpage.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
+  background-image: url('./bg.svg');
+  background-position: center 60%;
+  /* Empurra a imagem 60% para baixo */
+  background-repeat: repeat;
   background-size: cover;
   background-color: #541084;
 
-  padding-bottom: 6vw;
+  padding-bottom: 12vw;
 }
 
 .bodyContainer {
@@ -21,8 +27,10 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+
 }
 
+/*
 .App::after {
   content: "";
   position: absolute;
@@ -36,6 +44,7 @@
 
   pointer-events: none;
 }
+*/
 
 .dropsContainer {
   display: flex;
@@ -135,39 +144,42 @@
 .MapContainer {
   position: relative;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: radial-gradient(circle 34vw at center, #A567C4, #541084);
   height: auto;
   width: 100%;
-  padding-top: 7vw;
+  padding-top: 2vw;
   margin-top: 2vw;
-  padding-bottom: 7vw;
+  padding-bottom: 12vw;
 }
 
+/*
 .MapContainer::before {
   content: "";
   position: absolute;
   top: -4%;
   left: 0;
   width: 100%;
-  height: 13%;
-  background: linear-gradient(to bottom, #F2F2F2 0%, #541084 70%);
+  height: 12%;
+  background: linear-gradient(to bottom, #F2F2F2 20%, #541084 70%);
   pointer-events: none;
 }
+*/
 
+/*
 .MapContainer::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 10%;
-
-  background: linear-gradient(to top, #8D45F6 0%, #541084 70%);
+  height: 12%;
+  background: linear-gradient(to top, #8D45F6 10%, #541084 70%);
   pointer-events: none;
 }
+*/
 
 .dropsColumnContainer span {
   color: #541084;
@@ -187,7 +199,7 @@
 }
 
 .dropsRowContainer img {
-  height: 15vw;
+  height: 13vw;
   width: 23.2vw;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
@@ -230,9 +242,9 @@
 }
 
 .dropsFrontCardContainerimg {
-  width: 63.6vw;
-  height: 39.3vw;
-
+  width: 54vw;
+  height: 29vw;
+  object-fit: cover;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 
@@ -241,7 +253,7 @@
 
 .dropsFrontCardContainerDiv {
   position: absolute;
-  bottom: 0%;
+  bottom: -20%;
   width: 100%;
   background: white;
   border-top: 0.5vw solid #ffc007;
@@ -328,7 +340,7 @@
   margin-top: 3vw;
   flex-direction: column;
 
-  margin-inline: 4vw;
+
 }
 
 .App-header span {
@@ -339,7 +351,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-inline: 1.5vw;
+  margin-inline: 1vw;
 
 
 }
@@ -359,15 +371,26 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-inline: 1.5vw;
+
 }
 
 .InnerContainerRow {
   display: flex;
-  display: flex;
+
   justify-content: space-around;
   align-items: center;
   width: auto;
+}
+
+.InnerContainerRow1 {
+  display: flex;
+  gap: 4vw;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #541084;
+  padding-inline: 5vw;
+  padding: 1vw;
 }
 
 .containerPlayer {
@@ -467,7 +490,8 @@
 
 @media (min-width: 1440px) {
   .App-Player {
-    transform: scale(0.9);
+    transform: scale(0.8);
+    top: -0.8vw;
   }
 }
 
@@ -636,7 +660,7 @@
   display: flex;
 
   align-items: center;
-
+  margin-top: 1vw;
   /* Ajuste conforme necessário */
 }
 
@@ -670,11 +694,11 @@
 }
 
 .side-image1 {
-  width: 40vw;
+  width: 25vw;
   /* 100% da largura da tela menos 4vw (2vw de cada lado) */
   height: auto;
   object-fit: cover;
-
+  margin-right: 15vw;
   /* Adicione uma margem ao redor das imagens */
 }
 
@@ -687,12 +711,7 @@
   gap: 1vw;
 }
 
-.dropsImage {
-  margin-top: 2vw;
-  align-self: flex-start;
-  margin-left: 5vw;
-  height: 10vw;
-}
+
 
 .progContainer {
   position: relative;
@@ -705,7 +724,9 @@
   background-size: cover;
   height: auto;
   width: 100%;
+  padding-inline: 6vw;
   padding-bottom: 7vw;
+  z-index: 15;
 }
 
 .progContainerRow {
@@ -717,7 +738,7 @@
   height: auto;
   position: relative;
   margin-inline: 1vw;
-
+  z-index: 15;
 }
 
 .progContainerColumn {
@@ -729,15 +750,17 @@
   margin-inline: 1vw;
 }
 
+
+
 .progCardContainerRow {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: auto;
+
   height: auto;
   position: relative;
-  margin-inline: 2vw;
+  margin-inline: 1vw;
   padding-right: 2vw;
 
   background-color: white;
@@ -758,11 +781,29 @@
   color: #1E1E1E;
 
   font-family: 'Rubik', sans-serif;
-  font-size: 0.98vw;
+  font-size: 0.70vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-align: center;
+  width: 7vw;
 
+
+}
+
+.progCardContainerRow span:nth-child(1) {
+  color: #2D0B3E;
+}
+
+.progCardContainerRow span:nth-child(2) {
+  color: green;
+  margin-block: 0.1vw;
+
+}
+
+.progCardContainerRow span:nth-child(3) {
+  color: #2D0B3E;
+  font-size: 0.60vw;
 }
 
 .progBallContainer {
@@ -774,24 +815,50 @@
 }
 
 
+/*
 .progContainer::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 25%;
-  background: linear-gradient(to bottom, #541084 0%, #F2F2F2 50%);
+  height: 55%;
+  background: linear-gradient(to bottom, #541084 0%, transparent 50%);
   pointer-events: none;
 }
-
+*/
 
 
 .progImage {
+  margin-top: 2vw;
   margin-block: 5vw;
   align-self: flex-start;
-  margin-left: 5vw;
-  height: 9vw;
+  margin-left: 4.5vw;
+  height: 7vw;
+  z-index: 5;
+}
+
+.mapImage {
+  margin-block: 2vw;
+  align-self: flex-start;
+  margin-left: 10.5vw;
+  height: 7vw;
+  z-index: 5;
+  margin-bottom: 6vw;
+}
+
+.dropsImage {
+  margin-block: 2vw;
+  align-self: flex-start;
+  margin-left: 10.5vw;
+  height: 7vw;
+  z-index: 5;
+}
+
+.textProgImg {
+  align-self: flex-start;
+  margin-left: 10.5vw;
+  height: 7vw;
   z-index: 5;
 }
 
@@ -819,12 +886,12 @@
 .promoContainer span {
   color: #541084;
   font-family: 'Rubik', sans-serif;
-  font-size: 0.8vw;
+  font-size: 0.9vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   z-index: 5;
-  padding: 0.2vw;
+  padding-inline: 0.6vw;
 }
 
 .promoContainerRow {
@@ -842,14 +909,15 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  width: 100%;
+
+  gap: 11vw;
   height: auto;
+
 }
 
 .promoCardBig {
   width: auto;
-  height: 27vw;
+  height: 22vw;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -857,20 +925,26 @@
 
 .promoActorRow img {
   width: auto;
-  height: 50vw;
+  height: 35vw;
   object-fit: contain;
 
+
+}
+
+.actorImage {
+  margin-top: 6vw;
+  padding-top: 4vw;
 }
 
 .promoCardBig img {
   width: auto;
-  height: 27vw;
+  height: 22vw;
   border-radius: 10px;
 }
 
 .promoCardSmall {
   width: auto;
-  height: 11.9vw;
+  height: 9.6vw;
   background-color: white;
   margin: 0 0.5vw;
   border-radius: 10px;
@@ -880,7 +954,7 @@
 
 .promoCardSmall img {
   width: auto;
-  height: 11.9vw;
+  height: 9.6vw;
   border-radius: 10px;
 }
 
@@ -908,17 +982,18 @@
   border-radius: 24px;
   z-index: 5;
   margin: 0.5rem;
-}
-
-.textProgImg {
   width: auto;
-  /* ajuste conforme necessário */
-  height: 10vw;
-  /* ajuste conforme necessário */
-  align-self: start;
-  margin-left: 2vw;
 
+
+  color: #541084;
+  font-family: 'Rubik', sans-serif;
+  font-size: 3vw;
 }
+
+
+
+
+
 
 .top10Container {
   display: flex;
@@ -1083,11 +1158,7 @@
     justify-content: center;
   }
 
-  .dropsImage {
 
-    margin-left: 5.6vw;
-
-  }
 
   .dropsFrontCardContainerimg {
     width: 88vw;
@@ -1158,13 +1229,13 @@
 
 .footer {
   background-color: #541084;
-  /* Cor de fundo roxa */
+
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
   width: 100%;
-  height: 15vw;
+  height: 20vw;
   gap: 12vw;
 }
 
@@ -1174,13 +1245,24 @@
   justify-content: center;
   align-items: center;
   margin: 0 10px;
+
+}
+
+.footerDiv1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+  margin-right: 6vw;
 }
 
 .footerImage1 {
-  width: 16vw;
-  height: 50px;
+  width: 19vw;
+  height: 5vw;
   margin: 0 10px;
-  object-fit: contain;
+  object-fit: fill;
+  margin-block: 0.5vw;
 }
 
 .footerImage2 {
@@ -1201,29 +1283,60 @@
   color: #ffffff;
   /* Cor do texto branca */
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5vw;
+  font-size: 3vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   z-index: 5;
   margin-block: 1vw;
+
+}
+
+.nossoStyle {
+  color: #9248FF;
+  font-size: 3vw;
+}
+
+.nossoStyle1 {
+  margin-right: 4vw;
+  font-size: 3vw;
+}
+
+.appStyle {
+  margin-right: 3vw;
+  font-size: 3vw;
+
 }
 
 .imageContainer {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
+  margin-block:2vw ;
+}
+
+.imageContainer1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
 }
 
 .contato {
   background-color: #541084;
-  /* Cor de fundo roxa */
   color: #ffffff;
-  /* Cor do texto branca */
   text-align: center;
-  padding: 20px;
-
+  
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+padding-block: 5vw;
+
 }
 
 .contato h2 {
@@ -1242,7 +1355,7 @@
   color: #ffffff;
   /* Cor do texto branca */
   font-family: 'Rubik', sans-serif;
-  font-size: 4vw;
+  font-size: 2.2vw;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -1260,4 +1373,33 @@
 
 .contatoInfo p {
   margin: 5px 0;
+  font-family: 'Rubik', sans-serif;
+  font-size: 1.5vw;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  z-index: 5;
+  margin-block: 1vw;
+}
+
+.redesSociaisP {
+  color: #ffffff;
+  /* Cor do texto branca */
+  font-family: 'Rubik', sans-serif;
+  font-size: 2.2vw;
+  font-style: normal;
+  font-weight: 400;
+
+  z-index: 5;
+  margin-block: 2vw;
+}
+@media (max-width: 600px) {
+  .imageContainer1 {
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .footerDiv1 {
+    margin-right: 16vw;
+  }
 }
